# XKCD-search-bot

./: .gitignore  Cargo.toml  bot.py  scraper.py
src/: main.rs  scraper.rs
